# supermarket_elt

./: README.md  pyproject.toml
back-end/API/: API.py
backend/: start.py
backend/API/: API.py  products.csv
backend/aws/: client.py
backend/contracts/: schema.py
backend/data_source/: api_collector.py
frontend/: main.py
frontend/contracts/: contracts.py
frontend/data_source/: excel_collector.py
